# delivery_robot

./: Basic_Linux.txt  README.md  ROS1_serial_node  Thiết lập kết nối SSH.txt  test  test.txt
ROS1_MCU_NODE/serial_cmd_vel/: CMakeLists.txt
ROS1_MCU_NODE/serial_cmd_vel/launch/: cmd_vel_listener.launch
ROS1_MCU_NODE/serial_cmd_vel/src/: serial_cmd_vel_node.cpp
delivery_bringup/: CMakeLists.txt  package.xml
delivery_bringup/config/: robot_geometry.yaml  swerve_controller.yaml
delivery_bringup/launch/: start_controller.launch.py  swerve_control_odom.launch.py  teleop_joy.launch.py
delivery_gazebo/: CMakeLists.txt  package.xml
delivery_gazebo/launch/: rsp.launch.py  spawn_robot_description.launch.py  spawn_robot_ros2.launch.xml  start_world.launch.py
delivery_gazebo/meshes/: base_link.stl  fl_steer_link_1.stl  fl_wheel_link_1.stl  fr_steer_link_1.stl  fr_wheel_link_1.stl  rl_steer_link_1.stl  rl_wheel_link_1.stl  rr_steer_link_1.stl  rr_wheel_link_1.stl
delivery_gazebo/meshes/collision/: base_link.stl  fl_steer_link_1.stl  fl_wheel_link_1.stl  fr_steer_link_1.stl  fr_wheel_link_1.stl  rl_steer_link_1.stl  rl_wheel_link_1.stl  rr_steer_link_1.stl  rr_wheel_link_1.stl
delivery_gazebo/urdf/: materials.xacro  robot.urdf.xacro  robot_base.xacro  robot_control.xacro  robot_core.xacro
four_ws_control/scripts/: robot_control.py
khanh/: launch.py  s.xt
mpu6050_serial_to_imu/arduino/MPU6050/: MPU6050.ino
mpu6050_serial_to_imu/launch/: demo.launch  serial_sensor.launch
mpu6050_serial_to_imu/rviz/: demo.rviz
mpu6050_serial_to_imu/src/: mpu6050_serial_to_imu_node.cpp
rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch
robot_pose_ekf/src/: odom_estimation_node.cpp
robot_swerve_description/: CMakeLists.txt  package.xml
robot_swerve_description/description/: gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
robot_swerve_description/launch/: controller.launch.py  gazebo.launch.py  robot_state_publisher.launch.py  rsp.launch.py  simulation.launch.py
robot_swerve_description/map_test/map_nho/: model.sdf
robot_swerve_description/map_test/map_phong/: model.config
robot_swerve_description/map_test/map_ver3/: model.config  model.sdf
robot_swerve_description/meshes/: steering_front_left_link_1.stl  steering_rear_right_link_1.stl
robot_swerve_description/models/robot_swerve/: robot_swerve.sdf
robot_swerve_description/models/robot_swerve/config/: controllers.yaml  sim_controllers.yaml
robot_swerve_description/models/robot_swerve/meshes/: steering_rear_left_link_1.stl
robot_swerve_description/rviz/: test.rviz
robot_swerve_description/urdf/: materials.xacro  robot_swerve.gazebo  robot_swerve.trans  robot_swerve.urdf  robot_v5.gazebo  robot_v5.trans  robot_v5.xacro
robot_swerve_description/worlds/: 4ws_world.model
robot_swerve_v2/robot_swerve_description/: CMakeLists.txt  package.xml
robot_swerve_v2/robot_swerve_description/launch/: robot_sim_swerve.launch.py  spawn_swerve_robot.launch.py  teleop_joy.launch.py
robot_swerve_v2/robot_swerve_description/meshes/: wheel_front_left_link_1.stl
robot_swerve_v2/robot_swerve_description/rviz/: test.rviz
robot_swerve_v2/robot_swerve_description/urdf/: materials.xacro  robot_swerve.gazebo  robot_swerve.gv  robot_swerve.urdf
ros1_noetic_real/laser_scan_matcher/demo/: demo.launch  demo.rviz  demopi4.launch  tfdemopi4.launch
ros1_noetic_real/laser_scan_matcher/src/: laser_scan_matcher.cpp
ros2_foxy_simu/swerve_cartographer/: CMakeLists.txt  package.xml
ros2_foxy_simu/swerve_cartographer/config/: swerve_lds_2d.lua
ros2_foxy_simu/swerve_cartographer/include/swerve_cartographer/: pubPose.hpp
ros2_foxy_simu/swerve_cartographer/launch/: cartographer.launch.py
ros2_foxy_simu/swerve_cartographer/src/: main_pub_pose.cpp  pubPose.cpp
ros2_foxy_simu/swerve_controller/swerve_controller/: swerve_odometer.py
ros2_foxy_simu/swerve_description/: CMakeLists.txt  package.xml
ros2_foxy_simu/swerve_navigation2/: CMakeLists.txt  package.xml
ros_brigde_mcu/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros_brigde_mcu/launch/: ros_brigde.launch.py
ros_brigde_mcu/ros_brigde_mcu/: ros_read_serial.py  ros_send_serial.py
ros_brigde_mcu/src/: ros_send_serial.py
rplidar_ros/launch/: rplidar_a1.launch
rplidar_ros/rviz/: rplidar.rviz
serial_cmd_vel/src/: serial_cmd_vel_node.cpp
swerve_controller/: setup.py
swerve_controller/launch/: swerve_control_odom.launch.py
swerve_controller/swerve_controller/: swerve_odometer.py
(+28 files in other folders)
